# Haskell-Pacman

./: README.md  projeto.cabal  stack.yaml
mapas/: mapa.txt
src/: Blocos.hs  Check.hs  Colisao.hs  Fantasma.hs  GeradorSprite.hs  Jogo.hs  Main.hs  Movimento.hs  Pacman.hs  Utilidades.hs
tests/: test.hs
