name:                projeto
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ufabc-bcc/proposta-de-projeto-diurno-ha
license:             BSD3
license-file:        LICENSE
author:              Edson Gomes Martinelli, Rafael Akio Shishito Matos
copyright:           2019 Edson Gomes e Rafael Akio
category:            Desktop
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md


executable projeto
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       Blocos, Pacman, Fantasma, Utilidades, Movimento, Jogo, Colisao, GeradorSprite
  build-depends:       base >= 4.7 && < 5,
                       gloss (==1.13.*),
                       random,
                       bytestring,
                       QuickCheck

test-suite test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests, src
  main-is:             test.hs
  other-modules:       Blocos, Pacman, Fantasma, Utilidades, Movimento, Jogo, Colisao, GeradorSprite
  build-depends:       base >= 4.7 && < 5,
                       gloss (==1.13.*),
                       random,
                       bytestring,
                       QuickCheck,
                       tasty == 1.2.*,
                       tasty-quickcheck == 0.10.*
